fix flexbox alignment issues with IE and Edge

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -534,6 +534,10 @@ blockquote {
 			filter: grayscale(70%);
 			z-index: -1;
 			background-size: cover;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
 		}
 
 		&__container {
