--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -30,8 +30,6 @@ $brk--large-desktop: 1920px;
 		flex-flow: row wrap;
 		justify-content: center;
 		align-items: flex-start;
-		max-width: 960px;
-		margin: 0 auto;
 		padding: 2*$pad $pad;
 
 		p, img {
